...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jZV-vb-JZv">
                                <rect key="frame" x="97.5" y="148" width="180" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="180" id="4ZS-h9-QQy"/>
                                    <constraint firstAttribute="height" constant="40" id="MYN-TX-nn7"/>
                                </constraints>
                                <state key="normal" title="Show Login"/>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OXQ-lP-IJ2">
                                <rect key="frame" x="97.5" y="220" width="180" height="40"/>
                                <state key="normal" title="Show Registration"/>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="OXQ-lP-IJ2" firstAttribute="top" secondItem="jZV-vb-JZv" secondAttribute="bottom" constant="32" id="2QY-PD-B7u"/>
                            <constraint firstItem="OXQ-lP-IJ2" firstAttribute="height" secondItem="jZV-vb-JZv" secondAttribute="height" id="9il-HK-k3k"/>
...
                        <viewControllerLayoutGuide type="bottom" id="5IV-Tj-Ota"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="kJR-fF-fCr">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nbl-8a-OwO">
                                <rect key="frame" x="16" y="82" width="343" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="9a3-ZU-fHa"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eb1-lY-0gq">
                                <rect key="frame" x="137" y="138" width="100" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="vOI-4h-kE6"/>
                                    <constraint firstAttribute="height" constant="40" id="x57-82-kxL"/>
                                </constraints>
                                <state key="normal" title="Log in"/>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wVY-MB-lfx">
                                <rect key="frame" x="16" y="36" width="343" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="aHF-XE-LwM"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hUr-fB-73I">
                                <rect key="frame" x="137" y="138" width="100" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="Rvo-kK-kIk"/>
                                    <constraint firstAttribute="height" constant="40" id="WGF-8j-eX5"/>
                                </constraints>
                                <state key="normal" title="Next"/>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gRy-Hc-i8a">
                                <rect key="frame" x="16" y="36" width="343" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="Uih-kk-7xc"/>
                                </constraints>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hML-7G-Z13">
                                <rect key="frame" x="137.5" y="138" width="100" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="CkS-np-skh"/>
                                    <constraint firstAttribute="width" constant="100" id="TiZ-oY-Zuw"/>
                                </constraints>
                                <state key="normal" title="Done"/>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iUn-pp-tSR">
                                <rect key="frame" x="16" y="36" width="343" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="Ffc-Y6-4ar"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
